--- a/jobs/index.html
+++ b/jobs/index.html
@@ -169,7 +169,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mkong1">mkong1</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527745710"
-                                       class="submissionTimestamp">2018-05-31 05:48:30</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -190,7 +190,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=greattypo">greattypo</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527732968"
-                                       class="submissionTimestamp">2018-05-31 02:16:08</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -211,7 +211,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kevinredman">kevinredman</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527720780"
-                                       class="submissionTimestamp">2018-05-30 22:53:00</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -232,7 +232,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=christianpbrink">christianpbrink</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527708038"
-                                       class="submissionTimestamp">2018-05-30 19:20:38</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -253,7 +253,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mthomasb">mthomasb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527695018"
-                                       class="submissionTimestamp">2018-05-30 15:43:38</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -274,7 +274,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=justin">justin</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527681446"
-                                       class="submissionTimestamp">2018-05-30 11:57:26</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -295,7 +295,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kohnke">kohnke</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527667596"
-                                       class="submissionTimestamp">2018-05-30 08:06:36</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -316,7 +316,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=irvinglin">irvinglin</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527653745"
-                                       class="submissionTimestamp">2018-05-30 04:15:45</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -337,7 +337,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jstreebin">jstreebin</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527641834"
-                                       class="submissionTimestamp">2018-05-30 00:57:14</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -358,7 +358,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=amirmanji">amirmanji</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527629922"
-                                       class="submissionTimestamp">2018-05-29 21:38:42</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -379,7 +379,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=the_economist">the_economist</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527616624"
-                                       class="submissionTimestamp">2018-05-29 17:57:04</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -400,7 +400,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=OlgaVidisheva">OlgaVidisheva</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527534082"
-                                       class="submissionTimestamp">2018-05-28 19:01:22</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -421,7 +421,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dariaevdo">dariaevdo</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527478946"
-                                       class="submissionTimestamp">2018-05-28 03:42:26</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -442,7 +442,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=iEchoic">iEchoic</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527462879"
-                                       class="submissionTimestamp">2018-05-27 23:14:39</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -463,7 +463,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=thedogeye">thedogeye</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527437946"
-                                       class="submissionTimestamp">2018-05-27 16:19:06</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -506,8 +506,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
