--- a/jobs/page1.html
+++ b/jobs/page1.html
@@ -169,7 +169,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jayzee">jayzee</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527425757"
-                                       class="submissionTimestamp">2018-05-27 12:55:57</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -190,7 +190,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=yunhakim">yunhakim</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527413015"
-                                       class="submissionTimestamp">2018-05-27 09:23:35</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -211,7 +211,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=nimz">nimz</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527397226"
-                                       class="submissionTimestamp">2018-05-27 05:00:26</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -232,7 +232,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sajithw">sajithw</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527383929"
-                                       class="submissionTimestamp">2018-05-27 01:18:49</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -253,7 +253,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=arram">arram</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527371464"
-                                       class="submissionTimestamp">2018-05-26 21:51:04</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -274,7 +274,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=alooPotato">alooPotato</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527358998"
-                                       class="submissionTimestamp">2018-05-26 18:23:18</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -295,7 +295,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=aharm">aharm</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527344316"
-                                       class="submissionTimestamp">2018-05-26 14:18:36</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -316,7 +316,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tyoung">tyoung</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527312456"
-                                       class="submissionTimestamp">2018-05-26 05:27:36</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -337,7 +337,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=slederer">slederer</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527299714"
-                                       class="submissionTimestamp">2018-05-26 01:55:14</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -358,7 +358,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=gangeska1984">gangeska1984</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527287249"
-                                       class="submissionTimestamp">2018-05-25 22:27:29</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -379,7 +379,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=joshbuckley">joshbuckley</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527275338"
-                                       class="submissionTimestamp">2018-05-25 19:08:58</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -400,7 +400,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hirokitakeuchi">hirokitakeuchi</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527262042"
-                                       class="submissionTimestamp">2018-05-25 15:27:22</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -421,7 +421,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=eliam2">eliam2</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527229550"
-                                       class="submissionTimestamp">2018-05-25 06:25:50</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -442,7 +442,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kevintxwu">kevintxwu</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527216808"
-                                       class="submissionTimestamp">2018-05-25 02:53:28</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -463,7 +463,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=borna">borna</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527204897"
-                                       class="submissionTimestamp">2018-05-24 23:34:57</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -511,8 +511,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
