--- a/jobs/page2.html
+++ b/jobs/page2.html
@@ -169,7 +169,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=borna">borna</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527204897"
-                                       class="submissionTimestamp">2018-05-24 23:34:57</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -190,7 +190,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mfitzerald">mfitzerald</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527192986"
-                                       class="submissionTimestamp">2018-05-24 20:16:26</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -211,7 +211,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=roger_lee">roger_lee</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527173811"
-                                       class="submissionTimestamp">2018-05-24 14:56:51</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -257,8 +257,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
