--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -191,8 +191,8 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=henryjones">henryjones</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527724639"
-                                       class="submissionTimestamp">2018-05-30 23:57:19</a> &nbsp;•&nbsp;
-                                    168 points
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    169 points
                                 </span>
                             </td>
                         </tr>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kbal11">kbal11</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527699700"
-                                       class="submissionTimestamp">2018-05-30 17:01:40</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     167 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527696931"
-                                       class="submissionTimestamp">2018-05-30 16:15:31</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     161 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=firebacon">firebacon</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527696302"
-                                       class="submissionTimestamp">2018-05-30 16:05:02</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     147 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=diego898">diego898</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527685208"
-                                       class="submissionTimestamp">2018-05-30 13:00:08</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     145 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527708678"
-                                       class="submissionTimestamp">2018-05-30 19:31:18</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     129 points
                                 </span>
                             </td>
@@ -317,8 +317,8 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527717287"
-                                       class="submissionTimestamp">2018-05-30 21:54:47</a> &nbsp;•&nbsp;
-                                    125 points
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    126 points
                                 </span>
                             </td>
                         </tr>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527682645"
-                                       class="submissionTimestamp">2018-05-30 12:17:25</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     125 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=smarri">smarri</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527691490"
-                                       class="submissionTimestamp">2018-05-30 14:44:50</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     117 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=justin">justin</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527698816"
-                                       class="submissionTimestamp">2018-05-30 16:46:56</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     116 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=LinuxBender">LinuxBender</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527689530"
-                                       class="submissionTimestamp">2018-05-30 14:12:10</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     114 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=shawndimantha">shawndimantha</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527711653"
-                                       class="submissionTimestamp">2018-05-30 20:20:53</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     112 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=NN88">NN88</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527680764"
-                                       class="submissionTimestamp">2018-05-30 11:46:04</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     108 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tristanj">tristanj</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527711050"
-                                       class="submissionTimestamp">2018-05-30 20:10:50</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     100 points
                                 </span>
                             </td>
@@ -485,8 +485,8 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dfee">dfee</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527701417"
-                                       class="submissionTimestamp">2018-05-30 17:30:17</a> &nbsp;•&nbsp;
-                                    98 points
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    99 points
                                 </span>
                             </td>
                         </tr>
@@ -535,8 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
