--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527689204"
-                                       class="submissionTimestamp">2018-05-30 14:06:44</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     97 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Spellman">Spellman</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527696873"
-                                       class="submissionTimestamp">2018-05-30 16:14:33</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     89 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mudil">mudil</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527689440"
-                                       class="submissionTimestamp">2018-05-30 14:10:40</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     89 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527681671"
-                                       class="submissionTimestamp">2018-05-30 12:01:11</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     89 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=scott_s">scott_s</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527708323"
-                                       class="submissionTimestamp">2018-05-30 19:25:23</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     80 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527686285"
-                                       class="submissionTimestamp">2018-05-30 13:18:05</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     80 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lewurm">lewurm</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527687340"
-                                       class="submissionTimestamp">2018-05-30 13:35:40</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     79 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ProAm">ProAm</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527699609"
-                                       class="submissionTimestamp">2018-05-30 17:00:09</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     70 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527698018"
-                                       class="submissionTimestamp">2018-05-30 16:33:38</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     68 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kawera">kawera</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527733315"
-                                       class="submissionTimestamp">2018-05-31 02:21:55</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     67 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Uberphallus">Uberphallus</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527681438"
-                                       class="submissionTimestamp">2018-05-30 11:57:18</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     67 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kuwze">kuwze</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527681259"
-                                       class="submissionTimestamp">2018-05-30 11:54:19</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     66 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527684994"
-                                       class="submissionTimestamp">2018-05-30 12:56:34</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     62 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lego_bot">lego_bot</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527720824"
-                                       class="submissionTimestamp">2018-05-30 22:53:44</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     58 points
                                 </span>
                             </td>
@@ -485,7 +485,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jsonne">jsonne</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527711257"
-                                       class="submissionTimestamp">2018-05-30 20:14:17</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     57 points
                                 </span>
                             </td>
@@ -535,8 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
