--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mariuz">mariuz</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527693871"
-                                       class="submissionTimestamp">2018-05-30 15:24:31</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     25 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rinze">rinze</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527708521"
-                                       class="submissionTimestamp">2018-05-30 19:28:41</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     24 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=startupflix">startupflix</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527687190"
-                                       class="submissionTimestamp">2018-05-30 13:33:10</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     24 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=njn">njn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527737192"
-                                       class="submissionTimestamp">2018-05-31 03:26:32</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     22 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sinemetu11">sinemetu11</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527734715"
-                                       class="submissionTimestamp">2018-05-31 02:45:15</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     22 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mrleiter">mrleiter</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527692175"
-                                       class="submissionTimestamp">2018-05-30 14:56:15</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     22 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=wunderwaffe">wunderwaffe</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527681000"
-                                       class="submissionTimestamp">2018-05-30 11:50:00</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     22 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hdhd42">hdhd42</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527713014"
-                                       class="submissionTimestamp">2018-05-30 20:43:34</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     20 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=watchdogtimer">watchdogtimer</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527701768"
-                                       class="submissionTimestamp">2018-05-30 17:36:08</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     20 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527687199"
-                                       class="submissionTimestamp">2018-05-30 13:33:19</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     20 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=zakki">zakki</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527674991"
-                                       class="submissionTimestamp">2018-05-30 10:09:51</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     20 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=happy-go-lucky">happy-go-lucky</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527685581"
-                                       class="submissionTimestamp">2018-05-30 13:06:21</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     19 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=MiriamWeiner">MiriamWeiner</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527678216"
-                                       class="submissionTimestamp">2018-05-30 11:03:36</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     19 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=smallsuccess">smallsuccess</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527701120"
-                                       class="submissionTimestamp">2018-05-30 17:25:20</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     18 points
                                 </span>
                             </td>
@@ -485,7 +485,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mohi13">mohi13</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527691470"
-                                       class="submissionTimestamp">2018-05-30 14:44:30</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     18 points
                                 </span>
                             </td>
@@ -535,8 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
