--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jasonkostempski">jasonkostempski</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527700646"
-                                       class="submissionTimestamp">2018-05-30 17:17:26</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     10 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hcrisp">hcrisp</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527739322"
-                                       class="submissionTimestamp">2018-05-31 04:02:02</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     9 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=NN88">NN88</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527732705"
-                                       class="submissionTimestamp">2018-05-31 02:11:45</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     9 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527727183"
-                                       class="submissionTimestamp">2018-05-31 00:39:43</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     9 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=vaishaksuresh">vaishaksuresh</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527725198"
-                                       class="submissionTimestamp">2018-05-31 00:06:38</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     9 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=iamspoilt">iamspoilt</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527721637"
-                                       class="submissionTimestamp">2018-05-30 23:07:17</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     9 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=calummoore">calummoore</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527700460"
-                                       class="submissionTimestamp">2018-05-30 17:14:20</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     9 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=posnet">posnet</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527684483"
-                                       class="submissionTimestamp">2018-05-30 12:48:03</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     9 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lucasthewalter">lucasthewalter</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527682418"
-                                       class="submissionTimestamp">2018-05-30 12:13:38</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     9 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=MaysonL">MaysonL</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527744363"
-                                       class="submissionTimestamp">2018-05-31 05:26:03</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     8 points
                                 </span>
                             </td>
@@ -427,8 +427,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
