--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -191,8 +191,8 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Mahn">Mahn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527702803"
-                                       class="submissionTimestamp">2018-05-30 17:53:23</a> &nbsp;•&nbsp;
-                                    981 points
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    982 points
                                 </span>
                             </td>
                         </tr>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=wei_jok">wei_jok</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527641541"
-                                       class="submissionTimestamp">2018-05-30 00:52:21</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     883 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=HoppedUpMenace">HoppedUpMenace</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527615386"
-                                       class="submissionTimestamp">2018-05-29 17:36:26</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     789 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527613849"
-                                       class="submissionTimestamp">2018-05-29 17:10:49</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     713 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=bkohlmann">bkohlmann</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527635967"
-                                       class="submissionTimestamp">2018-05-29 23:19:27</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     708 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=olifrost">olifrost</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527525026"
-                                       class="submissionTimestamp">2018-05-28 16:30:26</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     576 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ytNumbers">ytNumbers</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527604718"
-                                       class="submissionTimestamp">2018-05-29 14:38:38</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     459 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=gnomespaceship">gnomespaceship</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527603655"
-                                       class="submissionTimestamp">2018-05-29 14:20:55</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     454 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lilgreenland">lilgreenland</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527592246"
-                                       class="submissionTimestamp">2018-05-29 11:10:46</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     435 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=pstadler">pstadler</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527600293"
-                                       class="submissionTimestamp">2018-05-29 13:24:53</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     420 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=martinwoodward">martinwoodward</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527615171"
-                                       class="submissionTimestamp">2018-05-29 17:32:51</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     394 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=chewxy">chewxy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527571602"
-                                       class="submissionTimestamp">2018-05-29 05:26:42</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     388 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527675260"
-                                       class="submissionTimestamp">2018-05-30 10:14:20</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     380 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527597655"
-                                       class="submissionTimestamp">2018-05-29 12:40:55</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     360 points
                                 </span>
                             </td>
@@ -485,7 +485,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=DoreenMichele">DoreenMichele</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527695727"
-                                       class="submissionTimestamp">2018-05-30 15:55:27</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     339 points
                                 </span>
                             </td>
@@ -529,8 +529,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
