--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527705455"
-                                       class="submissionTimestamp">2018-05-30 18:37:35</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     314 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Robin_Message">Robin_Message</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527677593"
-                                       class="submissionTimestamp">2018-05-30 10:53:13</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     306 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=spondyl">spondyl</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527559843"
-                                       class="submissionTimestamp">2018-05-29 02:10:43</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     294 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=fafhrd91">fafhrd91</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527707401"
-                                       class="submissionTimestamp">2018-05-30 19:10:01</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     291 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=valeg">valeg</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527605617"
-                                       class="submissionTimestamp">2018-05-29 14:53:37</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     291 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527590950"
-                                       class="submissionTimestamp">2018-05-29 10:49:10</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     288 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527707442"
-                                       class="submissionTimestamp">2018-05-30 19:10:42</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     277 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=janvdberg">janvdberg</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527588413"
-                                       class="submissionTimestamp">2018-05-29 10:06:53</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     277 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527515211"
-                                       class="submissionTimestamp">2018-05-28 13:46:51</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     271 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=extesy">extesy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527629280"
-                                       class="submissionTimestamp">2018-05-29 21:28:00</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     268 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527514410"
-                                       class="submissionTimestamp">2018-05-28 13:33:30</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     257 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527532256"
-                                       class="submissionTimestamp">2018-05-28 18:30:56</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     242 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=noonespecial">noonespecial</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527517395"
-                                       class="submissionTimestamp">2018-05-28 14:23:15</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     242 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527495491"
-                                       class="submissionTimestamp">2018-05-28 08:18:11</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     242 points
                                 </span>
                             </td>
@@ -485,7 +485,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=benaadams">benaadams</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527701623"
-                                       class="submissionTimestamp">2018-05-30 17:33:43</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     233 points
                                 </span>
                             </td>
@@ -535,8 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
