--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527615999"
-                                       class="submissionTimestamp">2018-05-29 17:46:39</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     160 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=anigbrowl">anigbrowl</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527549085"
-                                       class="submissionTimestamp">2018-05-28 23:11:25</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     159 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Gimpei">Gimpei</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527539881"
-                                       class="submissionTimestamp">2018-05-28 20:38:01</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     159 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527629841"
-                                       class="submissionTimestamp">2018-05-29 21:37:21</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     158 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527622179"
-                                       class="submissionTimestamp">2018-05-29 19:29:39</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     156 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=benwr">benwr</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527493167"
-                                       class="submissionTimestamp">2018-05-28 07:39:27</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     155 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=brahmwg">brahmwg</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527641279"
-                                       class="submissionTimestamp">2018-05-30 00:47:59</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     153 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=miqkt">miqkt</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527497158"
-                                       class="submissionTimestamp">2018-05-28 08:45:58</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     150 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=firebacon">firebacon</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527696302"
-                                       class="submissionTimestamp">2018-05-30 16:05:02</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     147 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=joering2">joering2</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527646937"
-                                       class="submissionTimestamp">2018-05-30 02:22:17</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     146 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=diego898">diego898</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527685208"
-                                       class="submissionTimestamp">2018-05-30 13:00:08</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     145 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527586272"
-                                       class="submissionTimestamp">2018-05-29 09:31:12</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     141 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=startupflix">startupflix</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527659717"
-                                       class="submissionTimestamp">2018-05-30 05:55:17</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     140 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ghosthamlet">ghosthamlet</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527511111"
-                                       class="submissionTimestamp">2018-05-28 12:38:31</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     140 points
                                 </span>
                             </td>
@@ -485,7 +485,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=setquk">setquk</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527581090"
-                                       class="submissionTimestamp">2018-05-29 08:04:50</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     139 points
                                 </span>
                             </td>
@@ -535,8 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
