--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=t1o5">t1o5</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527539887"
-                                       class="submissionTimestamp">2018-05-28 20:38:07</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     139 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527645250"
-                                       class="submissionTimestamp">2018-05-30 01:54:10</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     133 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=apo">apo</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527555391"
-                                       class="submissionTimestamp">2018-05-29 00:56:31</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     132 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=js2">js2</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527515515"
-                                       class="submissionTimestamp">2018-05-28 13:51:55</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     132 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527708678"
-                                       class="submissionTimestamp">2018-05-30 19:31:18</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     129 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=privong">privong</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527509888"
-                                       class="submissionTimestamp">2018-05-28 12:18:08</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     127 points
                                 </span>
                             </td>
@@ -317,8 +317,8 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527717287"
-                                       class="submissionTimestamp">2018-05-30 21:54:47</a> &nbsp;•&nbsp;
-                                    125 points
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    126 points
                                 </span>
                             </td>
                         </tr>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527682645"
-                                       class="submissionTimestamp">2018-05-30 12:17:25</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     125 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=matt_d">matt_d</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527594702"
-                                       class="submissionTimestamp">2018-05-29 11:51:42</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     124 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jstanley">jstanley</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527503504"
-                                       class="submissionTimestamp">2018-05-28 10:31:44</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     119 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=smarri">smarri</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527691490"
-                                       class="submissionTimestamp">2018-05-30 14:44:50</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     117 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=justin">justin</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527698816"
-                                       class="submissionTimestamp">2018-05-30 16:46:56</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     116 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=LinuxBender">LinuxBender</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527689530"
-                                       class="submissionTimestamp">2018-05-30 14:12:10</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     114 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=velmu">velmu</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527517966"
-                                       class="submissionTimestamp">2018-05-28 14:32:46</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     113 points
                                 </span>
                             </td>
@@ -485,7 +485,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=shawndimantha">shawndimantha</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527711653"
-                                       class="submissionTimestamp">2018-05-30 20:20:53</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     112 points
                                 </span>
                             </td>
@@ -535,8 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
