--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=wallflower">wallflower</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527554747"
-                                       class="submissionTimestamp">2018-05-29 00:45:47</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     111 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527528267"
-                                       class="submissionTimestamp">2018-05-28 17:24:27</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     111 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=userbinator">userbinator</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527647519"
-                                       class="submissionTimestamp">2018-05-30 02:31:59</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     110 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=prabhatjha">prabhatjha</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527617167"
-                                       class="submissionTimestamp">2018-05-29 18:06:07</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     110 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=NN88">NN88</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527680764"
-                                       class="submissionTimestamp">2018-05-30 11:46:04</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     108 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527514646"
-                                       class="submissionTimestamp">2018-05-28 13:37:26</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     107 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tristanj">tristanj</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527711050"
-                                       class="submissionTimestamp">2018-05-30 20:10:50</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     100 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=markhenderson">markhenderson</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527543084"
-                                       class="submissionTimestamp">2018-05-28 21:31:24</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     100 points
                                 </span>
                             </td>
@@ -359,8 +359,8 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dfee">dfee</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527701417"
-                                       class="submissionTimestamp">2018-05-30 17:30:17</a> &nbsp;•&nbsp;
-                                    98 points
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    99 points
                                 </span>
                             </td>
                         </tr>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527689204"
-                                       class="submissionTimestamp">2018-05-30 14:06:44</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     97 points
                                 </span>
                             </td>
@@ -427,8 +427,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
