--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=fafhrd91">fafhrd91</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527707401"
-                                       class="submissionTimestamp">2018-05-30 19:10:01</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     291 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=valeg">valeg</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527605617"
-                                       class="submissionTimestamp">2018-05-29 14:53:37</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     291 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527590950"
-                                       class="submissionTimestamp">2018-05-29 10:49:10</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     288 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rexbee">rexbee</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527297031"
-                                       class="submissionTimestamp">2018-05-26 01:10:31</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     285 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=alias1">alias1</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527376680"
-                                       class="submissionTimestamp">2018-05-26 23:18:00</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     283 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=john58">john58</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527167104"
-                                       class="submissionTimestamp">2018-05-24 13:05:04</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     278 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527707442"
-                                       class="submissionTimestamp">2018-05-30 19:10:42</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     277 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=janvdberg">janvdberg</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527588413"
-                                       class="submissionTimestamp">2018-05-29 10:06:53</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     277 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mountainview">mountainview</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527485548"
-                                       class="submissionTimestamp">2018-05-28 05:32:28</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     277 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527407716"
-                                       class="submissionTimestamp">2018-05-27 07:55:16</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     272 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527515211"
-                                       class="submissionTimestamp">2018-05-28 13:46:51</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     271 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=denzil_correa">denzil_correa</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527168355"
-                                       class="submissionTimestamp">2018-05-24 13:25:55</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     269 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=extesy">extesy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527629280"
-                                       class="submissionTimestamp">2018-05-29 21:28:00</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     268 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=s-macke">s-macke</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527403442"
-                                       class="submissionTimestamp">2018-05-27 06:44:02</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     260 points
                                 </span>
                             </td>
@@ -485,7 +485,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527514410"
-                                       class="submissionTimestamp">2018-05-28 13:33:30</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     257 points
                                 </span>
                             </td>
@@ -535,8 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
