--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=fmihaila">fmihaila</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527697640"
-                                       class="submissionTimestamp">2018-05-30 16:27:20</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     56 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mhb">mhb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527681694"
-                                       class="submissionTimestamp">2018-05-30 12:01:34</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     56 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lnguyen">lnguyen</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527662703"
-                                       class="submissionTimestamp">2018-05-30 06:45:03</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     50 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=wglb">wglb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527728266"
-                                       class="submissionTimestamp">2018-05-31 00:57:46</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     43 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rgbrenner">rgbrenner</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527702450"
-                                       class="submissionTimestamp">2018-05-30 17:47:30</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     40 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=egb">egb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527686960"
-                                       class="submissionTimestamp">2018-05-30 13:29:20</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     39 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=majke">majke</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527681791"
-                                       class="submissionTimestamp">2018-05-30 12:03:11</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     36 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=itsmejeff">itsmejeff</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527680905"
-                                       class="submissionTimestamp">2018-05-30 11:48:25</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     36 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=yarosv">yarosv</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527709752"
-                                       class="submissionTimestamp">2018-05-30 19:49:12</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     34 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527701707"
-                                       class="submissionTimestamp">2018-05-30 17:35:07</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     34 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=vincvinc">vincvinc</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527704239"
-                                       class="submissionTimestamp">2018-05-30 18:17:19</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     33 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527693177"
-                                       class="submissionTimestamp">2018-05-30 15:12:57</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     33 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527686619"
-                                       class="submissionTimestamp">2018-05-30 13:23:39</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     30 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Topolomancer">Topolomancer</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527682645"
-                                       class="submissionTimestamp">2018-05-30 12:17:25</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     29 points
                                 </span>
                             </td>
@@ -485,7 +485,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=bangonkeyboard">bangonkeyboard</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527713824"
-                                       class="submissionTimestamp">2018-05-30 20:57:04</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     26 points
                                 </span>
                             </td>
@@ -535,8 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
