--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jaytaylor">jaytaylor</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527733408"
-                                       class="submissionTimestamp">2018-05-31 02:23:28</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     17 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=theCricketer">theCricketer</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527693704"
-                                       class="submissionTimestamp">2018-05-30 15:21:44</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     17 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527687840"
-                                       class="submissionTimestamp">2018-05-30 13:44:00</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     16 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527689623"
-                                       class="submissionTimestamp">2018-05-30 14:13:43</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     15 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=adamw2k">adamw2k</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527706759"
-                                       class="submissionTimestamp">2018-05-30 18:59:19</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     14 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=compumike">compumike</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527697008"
-                                       class="submissionTimestamp">2018-05-30 16:16:48</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     14 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lnguyen">lnguyen</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527723616"
-                                       class="submissionTimestamp">2018-05-30 23:40:16</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     13 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=thisisit">thisisit</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527669677"
-                                       class="submissionTimestamp">2018-05-30 08:41:17</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     13 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=benaadams">benaadams</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527701596"
-                                       class="submissionTimestamp">2018-05-30 17:33:16</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     12 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527672017"
-                                       class="submissionTimestamp">2018-05-30 09:20:17</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     12 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=neurotech1">neurotech1</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527741750"
-                                       class="submissionTimestamp">2018-05-31 04:42:30</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     11 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=redshirt">redshirt</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527730877"
-                                       class="submissionTimestamp">2018-05-31 01:41:17</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     11 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sizzle">sizzle</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527705887"
-                                       class="submissionTimestamp">2018-05-30 18:44:47</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     11 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=enuose42">enuose42</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527737006"
-                                       class="submissionTimestamp">2018-05-31 03:23:26</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     10 points
                                 </span>
                             </td>
@@ -485,7 +485,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=wck0">wck0</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527724373"
-                                       class="submissionTimestamp">2018-05-30 23:52:53</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     10 points
                                 </span>
                             </td>
@@ -535,8 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
