--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=spking">spking</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527177240"
-                                       class="submissionTimestamp">2018-05-24 15:54:00</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1312 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527356271"
-                                       class="submissionTimestamp">2018-05-26 17:37:51</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1306 points
                                 </span>
                             </td>
@@ -233,8 +233,8 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Mahn">Mahn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527702803"
-                                       class="submissionTimestamp">2018-05-30 17:53:23</a> &nbsp;•&nbsp;
-                                    981 points
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    982 points
                                 </span>
                             </td>
                         </tr>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=wei_jok">wei_jok</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527641541"
-                                       class="submissionTimestamp">2018-05-30 00:52:21</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     883 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=HoppedUpMenace">HoppedUpMenace</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527615386"
-                                       class="submissionTimestamp">2018-05-29 17:36:26</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     789 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jgrid007">jgrid007</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527263949"
-                                       class="submissionTimestamp">2018-05-25 15:59:09</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     748 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527613849"
-                                       class="submissionTimestamp">2018-05-29 17:10:49</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     713 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=bkohlmann">bkohlmann</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527635967"
-                                       class="submissionTimestamp">2018-05-29 23:19:27</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     708 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=olifrost">olifrost</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527525026"
-                                       class="submissionTimestamp">2018-05-28 16:30:26</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     576 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527458512"
-                                       class="submissionTimestamp">2018-05-27 22:01:52</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     468 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=brundolf">brundolf</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527342656"
-                                       class="submissionTimestamp">2018-05-26 13:50:56</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     462 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ytNumbers">ytNumbers</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527604718"
-                                       class="submissionTimestamp">2018-05-29 14:38:38</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     459 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=gnomespaceship">gnomespaceship</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527603655"
-                                       class="submissionTimestamp">2018-05-29 14:20:55</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     454 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kumaranvpl">kumaranvpl</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527239257"
-                                       class="submissionTimestamp">2018-05-25 09:07:37</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     444 points
                                 </span>
                             </td>
@@ -485,7 +485,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527315724"
-                                       class="submissionTimestamp">2018-05-26 06:22:04</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     442 points
                                 </span>
                             </td>
@@ -529,8 +529,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
