--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=AlexeyBrin">AlexeyBrin</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527342114"
-                                       class="submissionTimestamp">2018-05-26 13:41:54</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     369 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=vincvinc">vincvinc</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527234412"
-                                       class="submissionTimestamp">2018-05-25 07:46:52</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     361 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527597655"
-                                       class="submissionTimestamp">2018-05-29 12:40:55</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     360 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=zdw">zdw</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527228692"
-                                       class="submissionTimestamp">2018-05-25 06:11:32</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     353 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=craigkerstiens">craigkerstiens</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527260557"
-                                       class="submissionTimestamp">2018-05-25 15:02:37</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     349 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527422338"
-                                       class="submissionTimestamp">2018-05-27 11:58:58</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     340 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=DoreenMichele">DoreenMichele</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527695727"
-                                       class="submissionTimestamp">2018-05-30 15:55:27</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     339 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=nemoniac">nemoniac</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527247670"
-                                       class="submissionTimestamp">2018-05-25 11:27:50</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     328 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527705455"
-                                       class="submissionTimestamp">2018-05-30 18:37:35</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     314 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=helb">helb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527163787"
-                                       class="submissionTimestamp">2018-05-24 12:09:47</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     311 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=devy">devy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527267691"
-                                       class="submissionTimestamp">2018-05-25 17:01:31</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     307 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Robin_Message">Robin_Message</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527677593"
-                                       class="submissionTimestamp">2018-05-30 10:53:13</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     306 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sdfx">sdfx</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527151044"
-                                       class="submissionTimestamp">2018-05-24 08:37:24</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     306 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=walterbell">walterbell</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527368734"
-                                       class="submissionTimestamp">2018-05-26 21:05:34</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     295 points
                                 </span>
                             </td>
@@ -485,7 +485,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=spondyl">spondyl</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527559843"
-                                       class="submissionTimestamp">2018-05-29 02:10:43</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     294 points
                                 </span>
                             </td>
@@ -535,8 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
