--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -191,7 +191,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=warent">warent</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527449816"
-                                       class="submissionTimestamp">2018-05-27 19:36:56</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     256 points
                                 </span>
                             </td>
@@ -212,7 +212,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lunchbreak">lunchbreak</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527279559"
-                                       class="submissionTimestamp">2018-05-25 20:19:19</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     254 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527432456"
-                                       class="submissionTimestamp">2018-05-27 14:47:36</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     250 points
                                 </span>
                             </td>
@@ -254,7 +254,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527391269"
-                                       class="submissionTimestamp">2018-05-27 03:21:09</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     244 points
                                 </span>
                             </td>
@@ -275,7 +275,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=evanweaver">evanweaver</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527190066"
-                                       class="submissionTimestamp">2018-05-24 19:27:46</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     243 points
                                 </span>
                             </td>
@@ -296,7 +296,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527532256"
-                                       class="submissionTimestamp">2018-05-28 18:30:56</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     242 points
                                 </span>
                             </td>
@@ -317,7 +317,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=noonespecial">noonespecial</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527517395"
-                                       class="submissionTimestamp">2018-05-28 14:23:15</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     242 points
                                 </span>
                             </td>
@@ -338,7 +338,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527495491"
-                                       class="submissionTimestamp">2018-05-28 08:18:11</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     242 points
                                 </span>
                             </td>
@@ -359,7 +359,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527361236"
-                                       class="submissionTimestamp">2018-05-26 19:00:36</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     241 points
                                 </span>
                             </td>
@@ -380,7 +380,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=spking">spking</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527166721"
-                                       class="submissionTimestamp">2018-05-24 12:58:41</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     235 points
                                 </span>
                             </td>
@@ -401,7 +401,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=benaadams">benaadams</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527701623"
-                                       class="submissionTimestamp">2018-05-30 17:33:43</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     233 points
                                 </span>
                             </td>
@@ -422,7 +422,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527686085"
-                                       class="submissionTimestamp">2018-05-30 13:14:45</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     230 points
                                 </span>
                             </td>
@@ -443,7 +443,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527517144"
-                                       class="submissionTimestamp">2018-05-28 14:19:04</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     230 points
                                 </span>
                             </td>
@@ -464,7 +464,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=brudgers">brudgers</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527212447"
-                                       class="submissionTimestamp">2018-05-25 01:40:47</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     228 points
                                 </span>
                             </td>
@@ -485,7 +485,7 @@
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=a_w">a_w</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527267029"
-                                       class="submissionTimestamp">2018-05-25 16:50:29</a> &nbsp;•&nbsp;
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     227 points
                                 </span>
                             </td>
@@ -535,8 +535,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
-                1527746403</strong>
+            <strong class="fr" data-timestamp="1527746448" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
